# atci

./: .atconfig.example  .gitignore  CHANGES.md  CONFIGURATION_CHANGES.md  Cargo.toml  GETTING_STARTED.md  README.md  TRANSCRIPT_MODIFICATION_SUMMARY.md  VIDEO_PARTS_IMPLEMENTATION.md  bug_analysis_and_solution.md  clip_player_enhancements.md  huggingface_elixir_integration_options.md  implementing_huggingface_models_in_bumblebee.md  mix.exs  package-lock.json  simple_test  simple_test.rs  test_implementation.rs  test_video_parts.rs  url_encoding_analysis.md  video_length_implementation.md
.cursor/: environment-setup.md  environment.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
assets/: ConfigPage.js  HomePage-Bi_FAxcl.js  HomePage-D52S0Yly.js  HomePage.js  QueuePage-D7rtVNmi.js  QueuePage.js  chevron-left.js  index.css  index.html  index.js
assets/frontend/: ConfigPage-Cs3yB0E-.js  ConfigPage-CwO6MBbk.js  ConfigPage-DWe62UL6.js  ConfigPage-U46Ol8kj.js  HomePage-9BZkUK8s.js  HomePage-BE3GwEd0.js  HomePage-BI329jxp.js  HomePage-CfUBRrmE.js  HomePage-CqtsSxf4.js  HomePage-Dtk6gkbF.js  HomePage-HIk1kL4b.js  HomePage-jKN4912m.js  HomePage-o4JWuYPc.js  QueuePage-BtxpzuDR.js  QueuePage-CReewYws.js  QueuePage-Cie3oKs_.js  icons-D0PEVxHe.js  icons-dUk6Lg-n.js  index.css  index.html  index.js  radix-CDPlHJ-s.js  router-Cji3JhtE.js  utils-BMpDO24p.js
atci-rust/: Cargo.toml  Eddington.txt
atci-rust/assets/: index.css  index.html  index.js
atci-rust/src/: clipper.rs  config.rs  ffmpeg_manager.rs  files.rs  fuzzy_filterable_vec.rs  lib.rs  main.rs  model_manager.rs  queue.rs  search.rs  tools_manager.rs  transcripts.rs  video_processor.rs  web.rs
atci-rust/tests/: fuzzy_filterable_vec_test.rs  transcripts_integration.rs
config/: config.exs
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
lib/: atci.ex  autotranscript.ex
lib/atci/: application.ex  config_manager.ex  ffmpeg_manager.ex  meta_file_handler.ex  model_manager.ex  path_helper.ex  transcript_modifier.ex  video_info_cache.ex  whisper_cli_manager.ex
lib/autotranscript/: application.ex  config.ex  config_manager.ex  ffmpeg_manager.ex  meta_file_handler.ex  model_manager.ex  path_helper.ex  transcript_modifier.ex  video_info_cache.ex  whisper_cli_manager.ex
src/: auth.rs  clipper.rs  config.rs  db.rs  dev.rs  editor_tab.rs  file_tab.rs  files.rs  main.rs  metadata.rs  model_manager.rs  queue.rs  queue_tab.rs  search.rs  search_tab.rs  setup_wizard.rs  short_url.rs  system_tab.rs  tools_manager.rs  transcripts.rs  transcripts_tab.rs  tui.rs  video_parts.rs  video_processor.rs  web.rs
templates/: auth.html.hbs  clip_view.html.hbs
test/: atci_test.exs  autotranscript_test.exs  config_manager_test.exs  config_migration_test.exs  ffmpeg_manager_test.exs  meta_file_handler_test.exs  path_helper_test.exs  video_processor_test.exs
tests/: config_integration.rs  search_integration.rs  transcripts_integration.rs
(+81 files in other folders)
