[package]
name = "atci"
version = "25.10.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
confy = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
globset = "0.4"
walkdir = "2.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
uuid = { version = "1.18.0", features = ["v4"] }
rust-embed="8.7.2"
which = "7.0.0"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2.1"
rayon = "1.11"
rand = "0.8"
dialoguer = "0.11"
rocket = { version = "0.5", features = ["json"] }
rocket_dyn_templates = { version = "0.2", features = ["handlebars"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
base64 = "0.22.1"
urlencoding = "2.1"
sha2 = "0.10.9"
dirs = "5.0"
ctrlc = "3.4"
indicatif = "0.18"
rusqlite = { version = "0.37.0", features = ["bundled"] }
self_update = { version = "0.42", features = ["archive-zip"] }
ratatui = "0.29.0"
crossterm = "0.28"
image = "0.25.8"
ratatui-image = "8.0.1"
clipboard-rs = "0.2"
throbber-widgets-tui = "0.9"
tui-big-text = "0.7"
open = "5.3"
tui-scrollview = "0.5.1"
ratatui-explorer = "0.1.3"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
