[package]
name = "atci-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
confy = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
globset = "0.4"
walkdir = "2.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
uuid = { version = "1.18.0", features = ["v4"] }
rust-embed="8.7.2"
which = "7.0.0"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2.1"
rayon = "1.11"
dialoguer = "0.11"
rocket = { version = "0.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }
fs2 = "0.4"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"